# discord-reddit-posts

./: Dockerfile  Makefile  README.md  main.py  nfpm.yaml  posts.json  pyproject.toml
.github/workflows/: build.yml  run.yml  run.yml.example
discord_reddit_posts/: main.py
service/: discord-reddit-posts.service  postinstall.sh  postremove.sh  preremove.sh
